Changelog
=========

1.0b1 - Unreleased
------------------

- Remove common CSS registries. 
  Refs http://dev.plone.org/plone/ticket/9988.
  [dukebody]

- Copied updated structure of 'main' slot from classic theme to Sunburst
  [spliter]

1.0a5 - 2010-02-01
------------------

- Move the login overlay form labels slightly down to align vertically
  with their associated fields.
  Refs http://dev.plone.org/plone/ticket/10021.
  [dukebody]

- Align the action drop-down submenu to the right.
  Fixes http://dev.plone.org/plone/ticket/10074.
  [dukebody]

- Remove the ability for anonymous to send author feedback again. A quick
  survey of integrators showed that this wasn't desirable.
  [esteele]
  
- Avoid the test function in the main_template. It doesn't exist in view page
  template files.
  [hannosch]

- Simplify the bodyClass construction.
  [hannosch]

- Use renderBase from new location.
  [hannosch]

- Remove obsolete charset definition for the global_cache_settings macro.
  [hannosch]

- Follow the getSectionFromURL change in CMFPlone.
  [hannosch]

- Just a markup polishing - <metal> tags don't need explicit "metal" for 
  defining slots.
  [spliter]

- Copied preferred structure of 'main' slot from default main_template
  [spliter]

- Moved plone.abovecontent and plone.belowcontent viewlet managers actually 
  above and below content respectively for Sunburst. 
  References http://dev.plone.org/plone/ticket/10081
  [spliter]

- Support various image alignment classes and image caption.
  Based on the classic theme but with a slight sunburst touch. 
  http://dev.plone.org/plone/ticket/10043
  [pelle]  

- Don't limit the styling of portal messages etc. to the 
  #region-content, portal messages might also appear out side
  that area in an overlay, portlet etc.
  Fixes http://dev.plone.org/plone/ticket/10069
  [pelle]  

- Move search results to the left for RTL scripts.
  Fixes http://dev.plone.org/plone/ticket/10015.
  [emanlove]
