@@ -4,6 +4,10 @@ Changelog
 1.0b1 - Unreleased
 ------------------
 
+- Some sunburst for the site actions.
+  Refs https://dev.plone.org/plone/ticket/10176
+  [pelle]
+
 - Remove common CSS registries. 
   Refs http://dev.plone.org/plone/ticket/9988.
   [dukebody]
